--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 type="password"
 -->
   <button type="button" id="assessment" name="button">診断する</button>
-  <di id="result-area"></div>
+  <div id="result-area"></div>
     <div id="tweet-area">
 
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>  </div>
